--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cyclejs-examples",
   "version": "0.1.0",
   "dependencies": {
+    "classnames": "^1.2.0",
     "cyclejs": "^0.15.3",
     "lodash": "^3.5.0",
     "lodash.sortby": "^3.1.0",
