--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^3.8.11",
     "gulp-jsx": "^0.8.0",
     "gulp-plumber": "^1.0.0",
+    "mkdirp": "^0.5.0",
     "run-sequence": "^1.0.2",
     "watchify": "^2.4.0"
   },
