--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browserify": "^9.0.3",
     "glob": "^5.0.3",
     "gulp": "^3.8.11",
+    "gulp-cached": "^1.0.4",
     "gulp-jsx": "^0.8.0",
     "gulp-plumber": "^1.0.0",
     "mkdirp": "^0.5.0",
