--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "cyclejs-examples",
   "version": "0.2.0",
   "dependencies": {
+    "babel": "^4.7.16",
     "bower": "^1.3.12",
     "classnames": "^1.2.0",
-    "cyclejs": "^0.15.3",
+    "cyclejs": "^0.16.2",
     "lodash": "^3.5.0",
+    "lodash.range": "^3.0.0",
     "lodash.sortby": "^3.1.0",
     "lodash.values": "^3.0.0",
-    "node-uuid": "^1.4.3",
-    "object.assign": "^1.1.1"
+    "node-uuid": "^1.4.3"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
