--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "cyclejs-examples",
   "version": "0.7.0",
   "scripts": {
-    "nodemon": "nodemon -e js,html --exec babel-node ./backend/scripts/app.js --experimental",
-    "node": "babel-node backend/scripts/app.js --experimental"
+    "start": "babel-node backend/scripts/app.js",
+    "nodemon": "nodemon backend/scripts/app.js",
+    "devel": "gulp dist & npm run nodemon & gulp watch",
+    "release-patch": "git checkout master && gulp release && git commit -am 'Distribute/' && npm version patch && git push origin master --tags",
+    "release-minor": "git checkout master && gulp release && git commit -am 'Distribute/' && npm version minor && git push origin master --tags",
+    "release-major": "git checkout master && gulp release && git commit -am 'Distribute/' && npm version major && git push origin master --tags"
   },
   "dependencies": {
     "babel": "^4.7.16",
@@ -11,9 +15,9 @@
     "classnames": "^1.2.0",
     "config": "^1.12.0",
     "cyclejs": "^0.17.1",
-    "glob": "^5.0.3",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.9.4",
+    "gulp-jsx": "git://github.com/ivan-kleshnin/gulp-jsx.git",
     "gulp-less": "^3.0.2",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
@@ -29,8 +33,7 @@
     "nunjucks": "^1.2.0",
     "require-directory": "^2.1.0",
     "winston": "^0.9.0",
-    "winston-mail": "^0.3.2",
-    "gulp-jsx": "git://github.com/ivan-kleshnin/gulp-jsx.git"
+    "winston-mail": "^0.3.2"
   },
   "devDependencies": {
     "babelify": "^5.0.4",
@@ -40,6 +43,7 @@
     "gulp-cached": "^1.0.4",
     "gulp-plumber": "^1.0.0",
     "mkdirp": "^0.5.0",
+    "nodemon": "^1.3.7",
     "run-sequence": "^1.0.2",
     "watchify": "^3.0.0"
   },
