--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "start": "babel-node backend/scripts/app.js",
     "nodemon": "nodemon backend/scripts/app.js",
     "devel": "gulp dist & npm run nodemon & gulp watch",
-    "release-patch": "git checkout master && gulp release && git commit -am 'Distribute/' && npm version patch && git push origin master --tags",
-    "release-minor": "git checkout master && gulp release && git commit -am 'Distribute/' && npm version minor && git push origin master --tags",
-    "release-major": "git checkout master && gulp release && git commit -am 'Distribute/' && npm version major && git push origin master --tags"
+    "release-patch": "git checkout master && gulp dist && git commit -am 'Distribute/' && npm version patch && git push origin master --tags",
+    "release-minor": "git checkout master && gulp dist && git commit -am 'Distribute/' && npm version minor && git push origin master --tags",
+    "release-major": "git checkout master && gulp dist && git commit -am 'Distribute/' && npm version major && git push origin master --tags"
   },
   "dependencies": {
     "babel": "^4.7.16",
