--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bower": "^1.3.12",
     "classnames": "^1.2.0",
     "config": "^1.12.0",
-    "cyclejs": "git://github.com/staltz/cycle.git#streams",
+    "cyclejs": "^0.20.0",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.9.4",
     "gulp-jsx": "git://github.com/ivan-kleshnin/gulp-jsx.git",
