--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "babel": "^4.7.16",
+    "body-parser": "^1.12.4",
     "bower": "^1.3.12",
     "classnames": "^1.2.0",
     "config": "^1.12.0",
+    "cookie-parser": "^1.3.4",
     "cyclejs": "^0.20.1",
+    "express": "^4.12.3",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.9.4",
     "gulp-jsx": "git://github.com/ivan-kleshnin/gulp-jsx.git",
