Rename folders with zeros for better visual ordering

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # BY MASK ------------------------------------------------------------------------------------------
 public
-
+npm-debug.log
 *.iml
 .idea
 .DS_Store
