--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "cyclejs-examples",
   "version": "2.0.0",
-  "main": "backend/scripts/app.js",
   "scripts": {
     "lint": "eslint .",
     "build": "webpack --config webpack.config-prod.js --progress --colors",
-    "dev": "webpack-dev-server --config webpack.config-dev.js --progress --colors --port 2992 --inline"
+    "dev": "webpack-dev-server --config webpack.config-dev.js --progress --colors --port 2992 --inline",
+    "test": "mocha --opts specs/mocha.opts specs",
+    "test-watch": "mocha --opts specs/mocha.opts -w specs"
   },
   "dependencies": {
-    "babel": "^5.3.1",
-    "babel-core": "^5.3.1",
-    "babel-loader": "^5.0.0",
+    "babel": "^5.4.7",
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.1.3",
     "bower": "^1.4.1",
     "classnames": "^2.1.2",
     "cyclejs": "^0.22.0",
@@ -22,13 +23,14 @@
     "moment": "^2.10.3",
     "node-uuid": "^1.4.3",
     "ramda": "^0.14.0",
-    "readable-stream": "^1.0.33",
+    "readable-stream": "^1.1.13",
     "run-sequence": "^1.1.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.19",
-    "eslint": "^0.24.0"
+    "eslint": "^0.24.0",
+    "mocha": "^2.2.5"
   }
 }
