--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cyclejs-examples",
   "version": "2.0.0",
+  "private": true,
   "scripts": {
     "lint": "eslint .",
     "build": "webpack --config webpack.config-prod.js --progress --colors",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^3.1.19",
+    "chai": "^3.0.0",
     "eslint": "^0.24.0",
     "mocha": "^2.2.5"
   }
