--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test": "npm run eslint -s && npm run mocha -s"
   },
   "dependencies": {
+    "@cycle/core": "^1.0.0",
+    "@cycle/web": "^1.0.3",
     "babel": "^5.4.7",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "bower": "^1.4.1",
     "classnames": "^2.1.2",
-    "cyclejs": "^0.22.0",
     "deep-merge": "^1.0.0",
     "jsx-webpack-loader": "^0.1.2",
     "lodash.debounce": "^3.1.0",
