--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ramda": "^0.15.1",
     "readable-stream": "^2.0.1",
     "run-sequence": "^1.1.1",
+    "virtual-dom": "^2.0.1",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
   },
