--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "npm run eslint -s && npm run mocha -s"
   },
   "dependencies": {
-    "@cycle/core": "^1.0.0",
-    "@cycle/web": "^1.0.3",
+    "@cycle/core": "^3.1.0",
+    "@cycle/dom": "^5.0.1",
     "babel": "^5.6.14",
     "babel-core": "^5.6.15",
     "babel-loader": "^5.3.0",
