--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bower": "^1.4.1",
     "classnames": "^2.1.3",
     "deep-merge": "^1.0.0",
-    "jsx-webpack-loader": "^0.1.2",
+    "hyperscript": "^1.4.6",
+    "hyperscript-helpers": "^1.0.0",
     "lodash.debounce": "^3.1.1",
     "lodash.throttle": "^3.0.4",
     "moment": "^2.10.3",
