--- a/package.json
+++ b/package.json
@@ -4,39 +4,38 @@
   "private": true,
   "scripts": {
     "eslint": "eslint .",
-    "build": "webpack --config webpack.config-prod.js --progress --colors",
     "dev": "webpack-dev-server --config webpack.config-dev.js --progress --colors --port 2992 --inline",
     "mocha": "mocha --opts specs/mocha.opts specs",
     "test": "npm run eslint -s && npm run mocha -s"
   },
   "dependencies": {
     "@cycle/core": "^3.1.0",
-    "@cycle/dom": "^5.0.1",
-    "babel": "^5.6.14",
-    "babel-core": "^5.6.15",
-    "babel-loader": "^5.3.0",
-    "bower": "^1.4.1",
+    "@cycle/dom": "^5.1.2",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
+    "bower": "^1.5.2",
     "classnames": "^2.1.3",
+    "cycle-router5": "^0.2.0",
     "deep-merge": "^1.0.0",
+    "director": "^1.2.8",
     "hyperscript": "^1.4.6",
     "hyperscript-helpers": "^1.0.0",
     "lodash.debounce": "^3.1.1",
     "lodash.throttle": "^3.0.4",
-    "moment": "^2.10.3",
+    "moment": "^2.10.6",
     "node-uuid": "^1.4.3",
     "ramda": "^0.15.1",
-    "readable-stream": "^2.0.1",
-    "run-sequence": "^1.1.1",
-    "serialize-javascript": "^1.0.0",
+    "readable-stream": "^2.0.2",
+    "serialize-javascript": "^1.1.1",
     "virtual-dom": "^2.0.1",
-    "webpack": "^1.10.1",
+    "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.20",
     "chai": "^3.0.0",
     "eslint": "^0.24.0",
-    "mocha": "^2.2.5",
-    "nodemon": "^1.4.1"
+    "mocha": "^2.2.5"
   }
 }
