Update project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-# EXACT --------------------------------------------------------------------------------------------
 /ignore/
 /node_modules/
-
-# BY MASK ------------------------------------------------------------------------------------------
+/*/public/*.js
+/*/public/*.css
 npm-debug.log
 .idea
 .DS_Store
-
 test*.js
 *.iml
