Implement form examples

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@cycle/core": "^6.0.3",
     "@cycle/dom": "^9.1.0",
     "@cycle/isolate": "^1.2.0",
+    "flat": "^2.0.0",
+    "node-uuid": "^1.4.7",
     "ramda": "^0.19.1",
     "rx": "^4.1.0",
     "webpack": "^1.12.14"
