--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.3",
     "node-uuid": "^1.4.7",
     "ramda": "^0.19.1",
+    "route-parser": "0.0.5",
     "rx": "^4.1.0",
     "tcomb": "^3.0.0",
     "tcomb-validation": "^3.0.0",
