--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "webpack-dev-server --port 2992 --inline"
   },
   "dependencies": {
-    "@cycle/core": "git@github.com:ivan-kleshnin/core.git",
+    "@cycle/core": "^6.0.3",
     "@cycle/dom": "^9.1.0",
     "@cycle/isolate": "^1.2.0",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-function-bind": "^6.5.0",
+    "babel-plugin-transform-function-bind": "^6.5.2",
     "classnames": "^2.2.3",
     "node-uuid": "^1.4.7",
     "ramda": "^0.19.1",
