--- a/package.json
+++ b/package.json
@@ -3,7 +3,18 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --port 2992 --inline"
+    "1.0": "webpack-dev-server --content-base 1.0-form/public/ --inline --progress",
+    "1.1": "webpack-dev-server --content-base 1.1-form/public/ --inline --progress",
+    "1.2": "webpack-dev-server --content-base 1.2-form/public/ --inline --progress",
+    "1.3": "webpack-dev-server --content-base 1.3-form/public/ --inline --progress",
+    "1.4": "webpack-dev-server --content-base 1.4-form/public/ --inline --progress",
+    "1.5": "webpack-dev-server --content-base 1.5-form/public/ --inline --progress",
+
+    "2.0": "webpack-dev-server --content-base 2.0-routing/public/ --inline --progress",
+    "2.1": "webpack-dev-server --content-base 2.1-routing/public/ --inline --progress",
+    "2.2": "webpack-dev-server --content-base 2.2-routing/public/ --inline --progress",
+
+    "3.0": "webpack-dev-server --content-base 3.0-crud/public/ --inline --progress"
   },
   "dependencies": {
     "@cycle/core": "^6.0.3",
@@ -13,14 +24,15 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-function-bind": "^6.5.0",
     "babel-plugin-transform-function-bind": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
     "classnames": "^2.2.3",
     "node-uuid": "^1.4.7",
-    "ramda": "^0.19.1",
+    "ramda": "^0.21.0",
     "route-parser": "0.0.5",
     "rx": "^4.1.0",
     "tcomb": "^3.0.0",
     "tcomb-validation": "^3.0.0",
-    "webpack": "^1.12.14",
+    "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   },
   "author": "Ivan Kleshnin",
